--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <div class="header-content">
                 <h1 class="title">Early Careers Mentorship</h1>
                 <div class="description">
-                    I'm Silvia, experienced professional in business analytics & working in international companies in different countries. I provide mentorship for students and graduates to help them enter the job market (any area), Focus & skills assessment for business analytics positions, as well as reviews on CV & cover letters.
+                    I'm Silvia, experienced professional in business analytics & working in international companies in different countries. I provide mentorship for students and graduates to help them enter the job market (any area), focus & skills assessment for business analytics positions, as well as reviews on CV & cover letters.
                 </div>
             </div>
         </div>
